--- a/README.Rmd
+++ b/README.Rmd
@@ -175,6 +175,19 @@ dockerignore() |>
   write_dockerignore()
 ```
 
+## Related Packages
+
+`dockitect` is part of a broader ecosystem of tools for containerization and
+environment management in R. Depending on your specific needs, you might want
+to explore these complementary packages:
+
+- [`containerit`][containerit-pkg]: An alternative approach to generating 
+  Dockerfiles, with a focus on reproducible research workflows
+- `dockerfiler`[containerit-pkg]: Another R package for Dockerfile generation 
+  that uses a different syntax and approach
+- [`renv`][renv-pkg]: For R package dependency management, which pairs well 
+  with `dockitect` for fully reproducible environments
+
 ## Citation
 
 If you use `dockitect` in your research or project, please consider citing it:
@@ -186,3 +199,7 @@ citation("dockitect")
 ## License
 
 AGPL (>=3)
+
+[containerit-pkg]: https://github.com/o2r-project/containerit
+[dockerfiler-pkg]: https://github.com/ThinkR-open/dockerfiler
+[renv-pkg]: https://github.com/rstudio/renv/
