Define a location for pak during the R CMD check phase.

--- a/vignettes/getting-started-with-dockitect.Rmd
+++ b/vignettes/getting-started-with-dockitect.Rmd
@@ -12,6 +12,8 @@ knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>"
 )
+
+Sys.setenv(R_USER_CACHE_DIR = tempfile())
 ```
 
 ## Introduction
