--- a/vignettes/getting-started-with-dockitect.Rmd
+++ b/vignettes/getting-started-with-dockitect.Rmd
@@ -40,7 +40,7 @@ You can install the development version of `dockitect` from GitHub:
 remotes::install_github("coatless-rpkg/dockitect")
 ```
 
-Let's start by loading the package:
+Access the package by loading it:
 
 ```{r}
 #| label: setup
@@ -102,11 +102,11 @@ instructions to the Dockerfile so that we can run a script:
 #| label: basic-dockerfile-full
 # Create a Dockerfile for an R script
 df <- dockerfile() |>
-  dfi_from("rocker/r-ver:4.4.0") |>  # Base image with R 4.4.0
+  dfi_from("rocker/r-ver:4.4.0") |>   # Base image with R 4.4.0
   dfi_label(maintainer = "user@example.com") |>  # Add metadata
-  dfi_workdir("/app") |>  # Set working directory
+  dfi_workdir("/app") |>              # Set working directory
   dfi_copy("analysis.R", "/app/") |>  # Copy R script to container
-  dfi_cmd("Rscript analysis.R")  # Command to run when container starts
+  dfi_cmd("Rscript /app/analysis.R")  # Command to run when container starts
 
 # Print the Dockerfile
 print(df)
@@ -167,7 +167,7 @@ This template creates a basic R environment:
 #| label: template-base
 # Create a basic R image
 df_base <- dk_template_base(
-  r_version = "4.4.0",  # Specify R version
+  r_version = "4.4.0",                     # Specify R version
   additional_pkgs = c("dplyr", "ggplot2")  # Add R packages
 )
 print(df_base)
@@ -181,8 +181,8 @@ For Shiny web applications:
 #| label: template-shiny
 # Create a Shiny app image
 df_shiny <- dk_template_shiny(
-  r_version = "4.4.0",  # Specify R version
-  port = 3838,  # Port for Shiny server
+  r_version = "4.4.0",                     # Specify R version
+  port = 3838,                             # Port for Shiny server
   additional_pkgs = c("dplyr", "ggplot2")  # Add R packages
 )
 print(df_shiny)
@@ -224,9 +224,9 @@ di <- dockerignore()
 
 # Add patterns to ignore
 di <- di |>
-  di_add(".git/") |>    # Ignore Git directory
-  di_add("*.Rdata") |>  # Ignore R data files
-  di_add("data/*.csv")  # Ignore CSV files in data directory
+  di_add("*.Rdata") |>     # Ignore R data files
+  di_add("data/*.csv") |>  # Ignore CSV files in data directory
+  dk_template_ignore_git() # Add common Git patterns
 
 print(di)
 ```
