rmarkdown -> quarto vignettes
fix:

Found the following (possibly) invalid URLs:
  URL: http://localhost:3838/app
    From: inst/doc/making-a-dockitect-dockerfile-into-a-running-container.html
    Status: Error
    Message: Could not connect to server [localhost]:
      Failed to connect to localhost port 3838 after 2253 ms: Could not connect to server
  URL: https://www.rocker-project.org/ (moved to https://rocker-project.org/)
    From: inst/doc/making-a-dockitect-dockerfile-into-a-running-container.html
    Status: 301
    Message: Moved Permanently
For content that is 'Moved Permanently', please change http to https,
add trailing slashes, or replace the old by the new URL.

--- a/vignettes/getting-started-with-dockitect.qmd
+++ b/vignettes/getting-started-with-dockitect.qmd
@@ -1,17 +1,17 @@
 ---
 title: "Getting Started with dockitect"
-output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{Getting Started with dockitect}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
+knitr:
+  opts_chunk:
+    collapse: true
+    comment: '#>'
 ---
 
-```{r, include = FALSE}
-knitr::opts_chunk$set(
-  collapse = TRUE,
-  comment = "#>"
-)
+```{r}
+#| include: false
 
 Sys.setenv(R_USER_CACHE_DIR = tempfile())
 ```
